@@ -5,18 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
-      <h1>Password Generator</h1>
+      <h1 class="judul">Password Generator</h1>
       <p id="tampilpass"></p>
-      <input type="range" min="4" max="50" id="slider">
-      <p id="tampilslider">25</p>
+      <input type="range" min="4" max="50" id="slider" />
+      <p id="keamanan">Kuat 😁</p>
+      <p id="tampilslider">Panjang: 25</p>
+      <div>
+        <p id="alert">Passowrd Berhasil Di Salin!</p>
+        <button id="copyBtn">Copy</button>
+      </div>
       <div class="moreoption">
-        <input type="checkbox" id="hurufbesarsaja" checked/>
+        <input type="checkbox" id="hurufbesarsaja" checked />
         <label for="hurufbesarsaja">Huruf Besar</label>
 
-        <input type="checkbox" id="hurufkecil" checked/>
+        <input type="checkbox" id="hurufkecil" checked />
         <label for="hurufkecil">Huruf Kecil</label>
 
         <input type="checkbox" id="angka" checked />
@@ -25,8 +36,9 @@
         <input type="checkbox" id="simbol" checked />
         <label for="simbol">Simbol</label>
       </div>
+      <p class="last">By @cokvrindaa at github.</p>
     </div>
-    <p>Under construction!. By cokvrindaa at github.</p>
+
     <script src="index.js"></script>
   </body>
 </html>
